# usage-example-locally-installed

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  vector_add.cpp
src/: vector_add.cpp
